<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NftShop">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="404dp"
        android:layout_height="594dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="10dp"
        android:scrollbarThumbHorizontal="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.chip.ChipGroup
            android:layout_width="203dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.413"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPremium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/premium"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/button_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/my_nft"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/button_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTOP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/top"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/button_selector" />


            <com.google.android.material.chip.Chip
                android:id="@+id/chipArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/art"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/button_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/music"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/button_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sport"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/button_selector" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/other"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/button_selector" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="324dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:focusable="true"
        android:hint="none"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/selector_hint_text_color"
        app:endIconMode="clear_text"
        app:endIconTintMode="screen"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/Clicker"
        app:startIconDrawable="@drawable/ic_baseline_search_24"

        app:startIconTintMode="screen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_nft"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/points"
        android:layout_width="50dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/searchLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>